# workspace

./: .gitignore  expect.sh  iterm_login.sh  iterm_login_expect.sh  iterm_login_no_expect.sh  mac_route_set.sh
beego-project/: create_api.sh
builds/build-docker-ce/: README.md
builds/build-etcd/: build.sh
builds/build-in-docker/: .gitignore  Makefile  build.sh  main.go
builds/build-kubernetes/: build.sh
c-project/: README.md
installs/install-flarum/: .gitignore  README.md  start.sh
javascript/: package-lock.json  prepare_env_mac.sh
javascript/03-ES6-Module-Method-1-MJS/: app.mjs  module1.mjs  run.sh
javascript/03-ES6-Module-Method-2-BAZEL/: app.js  install.sh  run.sh  start.js
javascript/04-Node-Usage-App/: app.js  debug.sh  inspect.sh  profile.sh  run.sh
javascript/04-Node-Usage-Async/: async.js  file.md  run.sh  sync.js
javascript/05-ES6-Basic-Array/: app.js
javascript/05-ES6-Basic-Class/: app.js
javascript/05-ES6-Basic-Const/: app.js
javascript/05-ES6-Basic-Func/: app.js
javascript/05-ES6-Basic-Global/: app.js
javascript/05-ES6-Basic-Obj/: app.js
javascript/05-ES6-Basic-Scope/: app.js
javascript/05-ES6-Basic-String/: app.js
linux-makefile/: Makefile  Makefile.lib  Makefile.pub  Makefile.sub  Readme
net-benckmark/: .gitignore  README.md
script/: expect_login.sh  expect_sh_login.sh  id_relink.sh  iterm_login.sh
studys/study-libfuse/demo-empty/: CMakeLists.txt  Makefile.bak  demo-empty.c
studys/study-libfuse/demo-fake/: CMakeLists.txt  main.c  operations.c  operations.h
vim-config/: .vimrc  Readme.md  install.sh
(+515 files in other folders)
